Style button elements to avoid wrapping on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,8 @@ img {
 }
 
 button {
-    margin: 1rem;
-    padding: 1rem;
+    margin: 1%;
+    padding: 10px;
     font-family: 'Lora';
 }
 
